--- a/bower.json
+++ b/bower.json
@@ -2,17 +2,18 @@
   "name": "gulpweb",
   "version": "0.1.0",
   "dependencies": {
-    "angular": "~1.3.0",
-    "angular-resource": "~1.3.0",
+    "angular": "~1.5.6",
+    "angular-resource": "~1.5.6",
     "es5-shim": "~4.2.0",
     "json3": "~3.3.2",
     "angular-ui-router": "~0.2.15",
     "bootstrap-sass": "~3.3.5",
-    "angular-messages": "1.3"
+    "angular-messages": "1.5",
+    "angular-bootstrap": "^2.5.0"
   },
   "devDependencies": {
-    "angular-mocks": "~1.3.0",
-    "angular-scenario": "~1.3.0"
+    "angular-mocks": "~1.5.6",
+    "angular-scenario": "~1.5.6"
   },
   "overrides": {
     "es5-shim": {
