--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,9 @@
     "bootstrap-sass": "~3.3.5",
     "angular-messages": "1.5",
     "angular-bootstrap": "^2.5.0",
-    "angular-google-maps": "^2.4.1"
+    "angular-google-maps": "^2.4.1",
+    "angular-animate": "1.5.11",
+    "angular-file-model": "^0.3.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.6",
